# personal-assistant-desktop-server

./: .env.example  .gitignore  Makefile  README.md  hypercorn.toml.example  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
config/: __init__.py  ai.json  ai.yaml  models.json  user.json  user.yaml
docs/: available_voices.md  voices.md
metadata/: models.json
migrations/versions/: a0078beafcb6_initial_migration.py
models/: aliases.json
piper/voices/: en_US-amy-medium.onnx.json:Zone.Identifier  en_US-amy-medium.onnx:Zone.Identifier
src/: main.py
src/blueprints/: __init__.py
src/blueprints/chats/: models.py  routes.py
src/blueprints/users/: models.py  routes.py
src/communication/: schema.py  service.py
src/core/: schema.py
src/extensions/: __init__.py  ai_client.py  db.py  speech_to_text_client.py  text_to_speech_client.py
src/modules/: __init__.py
src/modules/ai/: ai.py  ai_client.py  service.py  stt.py  tts.py
src/modules/audio/: __init__.py  schemas.py  service.py  socket.py  sockets.py
src/modules/chat/: __init__.py  socket.py  sockets.py
src/modules/chats/: models.py  routes.py  schemas.py  sockets.py
src/modules/communication/: __init__.py  schemas.py  service.py  sockets.py
src/modules/users/: models.py  routes.py  schemas.py
src/stt/: service.py
src/tts/: schemas.py  service.py
src/utils/: logger.py  logging_config.py
src/websockets/: auth.py
